packages/gemican/gemican-5.0.1.tar.gz/gemican-5.0.1/gemican/tests/parse_error/parse_error.gmi
Title: Page with a parse error
Metadata without a colon, or no blank line before content.

Content begins here
